--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "tracing-datadog-macros"
 version = "0.0.1"
 edition = "2021"
 
-description = "Collection of tracing macros"
+description = "Collection of convenience macros to use with Datadog tracing"
 keywords = ["datadog", "tracing"]
 categories = ["development-tools::profiling"]
 repository = "https://github.com/baz-scm/tracing-datadog-macros"
@@ -17,10 +17,10 @@ doctest = false
 proc-macro = true
 
 [dependencies]
-proc-macro2 = "1.0.78"
-quote = "1.0.35"
-regex = "1.10.3"
-syn = { version = "2.0.52", default-features = false, features = ["full", "parsing", "proc-macro"] }
+proc-macro2 = "1.0"
+quote = "1.0"
+regex = "1.10"
+syn = { version = "2.0", default-features = false, features = ["full", "parsing", "proc-macro"] }
 tracing-attributes = { git = "https://github.com/baz-scm/tracing.git", branch = "v0.1.x" }
 
 [dev-dependencies]
