--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tracing-datadog-macros"
 version = "0.0.1"
 edition = "2021"
-rust-version = "1.65" # MSRV
+rust-version = "1.67.1" # MSRV
 
 description = "Collection of convenience macros to use with Datadog tracing"
 keywords = ["datadog", "tracing"]
@@ -21,6 +21,7 @@ proc-macro = true
 proc-macro2 = "1.0"
 quote = "1.0"
 regex = "1.11"
+syn = { version = "2.0", default-features = false, features = ["full", "parsing", "proc-macro"] }
 
 [dev-dependencies]
-rstest = "0.18.2" # 0.19+ needs Rust 1.67+
+rstest = "0.23.0" # 0.24+ needs Rust 1.70+
