--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,6 +4,8 @@ on:
   pull_request:
     paths-ignore:
       - 'README.md'
+  schedule:
+    - cron: '0 20 * * 6'
 
 permissions:
   contents: read
